syntax = "proto3";

package superhero;

import "google/api/annotations.proto";

service SuperheroService {
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/superheroes"
    };
  }

  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/v1/superheroes/{id}"
    };
  }

  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/superheroes"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/superheroes/{id}"
    };
  }
}

message Superhero {
  int32 id = 1;
  string full_name = 2;
  string alter_ego = 3;
  string image_url = 4;
  int32 intelligence = 5;
  int32 strength = 6;
  int32 speed = 7;
  int32 durability = 8;
  int32 power = 9;
  int32 combat = 10;
}

message ListRequest {}
message ListResponse {
  repeated Superhero superheroes = 1;
}

message GetRequest {
  int32 id = 1;
}
message GetResponse {
  Superhero superheroes = 1;
}

message CreateRequest {
  string full_name = 1;
  string alter_ego = 2;
}
message CreateResponse {
  int32 id = 1;
}

message DeleteRequest {
  int32 id = 1;
}
message DeleteResponse {}
